--- a/index_HD3.html
+++ b/index_HD3.html
@@ -108,7 +108,7 @@
                     THÔNG TIN LIÊN HỆ
                 </p>
                 <ul id="ul_ft">
-                    <li><img src="img/icon/home.png" id="ic_ft1"> Đoàn TNCH Hồ Chí Minh Thôn Vân Quật
+                    <li><img src="img/icon/home.png" id="ic_ft1"> Đoàn TNCS Hồ Chí Minh Thôn Vân Quật
                     </li>
                     <li> <img src="img/icon/map.png" id="ic_ft1"> Thôn Vân Quật, Xã Duy Thành, Huyện Duy Xuyên, Tỉnh Quảng Nam
                     </li>
