--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
           </p>
           <ul id="ul_ft">
             <li><img src="img/icon/home.png" id="ic_ft1">
-              Đoàn TNCS Hồ Chí Minh Thôn Vân Quật
+              Đoàn TNCH Hồ Chí Minh Thôn Vân Quật
             </li>
             <li> <img src="img/icon/map.png" id="ic_ft1">
               Thôn Vân Quật, Xã Duy Thành, Huyện Duy Xuyên, Tỉnh
