--- a/index_HD.html
+++ b/index_HD.html
@@ -1,173 +1,154 @@
 <!DOCTYPE html>
 <html lang="vi">
-  <head>
+
+<head>
     <title>Vân Quật - Hoạt động</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/css.css">
     <link rel="stylesheet" href="css/css_GT.css">
 
-    <link rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <script
-      src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-    <script
-      src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" type="text/css" href="bootstraps/css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="bootstraps/js/bootstrap.js">
-    <link type="text/css" href="bootstrap/css/bootstrap-responsive.min.css"
-      rel="stylesheet">
-    <link rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
-      integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w=="
-      crossorigin="anonymous" />
+    <link type="text/css" href="bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
     <script src="js/js.js"></script>
 
-  </head>
-  <body>
+</head>
+
+<body>
     <div class="container-fluid" style="display: flex; width: 100%;">
-      <img id="logoD" src="img/banner.png">
+        <img id="logoD" src="img/banner.png">
     </div>
     <div class="container-fluid">
-      <div
-        style="color: black; text-align: center; height : auto; font-weight: 500; float: center;font-size: 10px;"
-        id="time">
-        <span id="ngay"></span><span>/</span>
-        <span id="thang"></span><span>/</span>
-        <span id="nam"></span><span>,</span>
-        <span id="gio">00</span><span> :</span>
-        <span id="phut">00</span><span> :</span>
-        <span id="giay">00</span><span> </span>
-      </div>
+        <div style="color: black; text-align: center; height : auto; font-weight: 500; float: center;font-size: 10px;" id="time">
+            <span id="ngay"></span><span>/</span>
+            <span id="thang"></span><span>/</span>
+            <span id="nam"></span><span>,</span>
+            <span id="gio">00</span><span> :</span>
+            <span id="phut">00</span><span> :</span>
+            <span id="giay">00</span><span> </span>
+        </div>
     </div>
     <!-- //-------------menu------------------- -->
     <div class="container-fluid mt-2 bg-light">
-      <div id="menu_center">
-        <div class="topnav" id="myTopnav">
+        <div id="menu_center">
+            <div class="topnav" id="myTopnav">
 
-          <a id="mn" onclick="funcplay()" href="index.html">
-            <img id="icon_mn" src="img/icon/home.png">
-            Trang Chủ
-          </a>
-          <a href="index_GT.html" id="mn">
-            <img id="icon_mn" src="img/icon/info.png">
-            Giới Thiệu
-          </a>
-          <a href="" id="mn">
-            <img id="icon_mn" src="img/icon/news.png">
-            Hoạt Động
-          </a>
-          <a href="index_DCD1.html" id="mn">
-            <img id="icon_mn" src="img/icon/map.png">
-            Địa Chỉ Đỏ
-          </a>
-          <a href="index_lh.html" id="mn">
-            <img id="icon_mn" src="img/icon/contact.png">
-            Liên hệ
-          </a>
+                <a id="mn" onclick="funcplay()" href="index.html">
+                    <img id="icon_mn" src="img/icon/home.png"> Trang Chủ
+                </a>
+                <a href="index_GT.html" id="mn">
+                    <img id="icon_mn" src="img/icon/info.png"> Giới Thiệu
+                </a>
+                <a href="" id="mn">
+                    <img id="icon_mn" src="img/icon/news.png"> Hoạt Động
+                </a>
+                <a href="index_DCD1.html" id="mn">
+                    <img id="icon_mn" src="img/icon/map.png"> Địa Chỉ Đỏ
+                </a>
+                <a href="index_lh.html" id="mn">
+                    <img id="icon_mn" src="img/icon/contact.png"> Liên hệ
+                </a>
 
-          <a href="javascript:void(0);" class="icon"
-            onclick="myFunction()">
-            <i class="fa fa-bars"></i>
-          </a>
+                <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+                    <i class="fa fa-bars"></i>
+                </a>
+            </div>
         </div>
-      </div>
     </div>
     <!-- //--------end-menu------------------- -->
     <!-- ---------------carousel---------------- -->
     <div class="container-fluid mt-2">
-      <div id="myCarousel" class="carousel slide" data-ride="carousel">
-        <!-- Indicators -->
-        <ol class="carousel-indicators">
-          <li data-target data-slide-to="0" class="active"></li>
-          <li data-target data-slide-to="1"></li>
-          <li data-target data-slide-to="2"></li>
-        </ol>
+        <div id="myCarousel" class="carousel slide" data-ride="carousel">
+            <!-- Indicators -->
+            <ol class="carousel-indicators">
+                <li data-target data-slide-to="0" class="active"></li>
+                <li data-target data-slide-to="1"></li>
+                <li data-target data-slide-to="2"></li>
+            </ol>
 
-        <!-- Wrapper for slides -->
-        <div class="carousel-inner" id="carousel_img">
-          <div class="item active">
-            <img src="img/dtvq6.jpg" alt="Los Angeles" style="width:100%;">
-          </div>
-          <div class="item">
-            <img src="img/dtvq5.jpg" alt="Chicago" style="width:100%;">
-          </div>
-          <div class="item">
-            <img src="img/dtvq4.jpg" alt="New york" style="width:100%;">
-          </div>
+            <!-- Wrapper for slides -->
+            <div class="carousel-inner" id="carousel_img">
+                <div class="item active">
+                    <img src="img/dtvq6.jpg" alt="Los Angeles" style="width:100%;">
+                </div>
+                <div class="item">
+                    <img src="img/dtvq5.jpg" alt="Chicago" style="width:100%;">
+                </div>
+                <div class="item">
+                    <img src="img/dtvq4.jpg" alt="New york" style="width:100%;">
+                </div>
+            </div>
+            <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+                <span class="glyphicon glyphicon-chevron-left"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="right carousel-control" href="#myCarousel" data-slide="next">
+                <span class="glyphicon glyphicon-chevron-right"></span>
+                <span class="sr-only">Next</span>
+            </a>
         </div>
-        <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-          <span class="glyphicon glyphicon-chevron-left"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="right carousel-control" href="#myCarousel" data-slide="next">
-          <span class="glyphicon glyphicon-chevron-right"></span>
-          <span class="sr-only">Next</span>
-        </a>
-      </div>
     </div>
     <!-- --------news----------- -->
     <div class="container-fluid" id="sty_ne">
-      <p id="p_ne">Hoạt động nỗi bật</p>
-      <div class="row">
-        <div class="col-xs-2" id="dis1">
-        </div>
-        <div class="col-xs-8" id="dis2">
-          <!-- ----car------ -->
-          <div class="row">
-            <div class="col-xs-4">
-              <div class="card" id="card_news">
-                <img class="card-img-top" src="img/dtvq1.jpg" id="img_card">
-                <div class="card-body">
-                  <p class="card-title text-center" id="ch">Hội trại 2022</p>
-                  <p class="card-text" id="ch1">Hưởng ứng phong trào hoạt động
-                    hè 2022, Chi
-                    đoàn thôn Vân Quật đã...</p>
-                  <!-- <div id="btn_dt"> -->
-                    <button type="button" class="btn btn-primary" style="padding: 2px; "><a
+        <p id="p_ne">Hoạt động nỗi bật</p>
+        <div class="row">
+            <div class="col-xs-2" id="dis1">
+            </div>
+            <div class="col-xs-8" id="dis2">
+                <!-- ----car------ -->
+                <div class="row">
+                    <div class="col-xs-4">
+                        <div class="card" id="card_news">
+                            <img class="card-img-top" src="img/dtvq1.jpg" id="img_card">
+                            <div class="card-body">
+                                <p class="card-title text-center" id="ch">Hội trại 2022</p>
+                                <p class="card-text" id="ch1">Hưởng ứng phong trào hoạt động hè 2022, Chi đoàn thôn Vân Quật đã...</p>
+                                <!-- <div id="btn_dt"> -->
+                                <button type="button" class="btn btn-primary" style="padding: 2px; "><a
                         href="index_HD1.html" style="color: aliceblue;">Xem chi
                         tiết</a></button>
-                    <!-- <a href="index_HD1.html" class="btn btn-primary"  id="btn_a">Xem chi -->
-                    <!-- tiết</a> -->
-                  <!-- </div> -->
-                </div>
-              </div>
-            </div>
-            <div class="col-xs-4">
-              <div class="card" id="card_news">
-                <img class="card-img-top" src="img/dtvq2.jpg" id="img_card">
-                <div class="card-body">
-                  <p class="card-title text-center" id="ch">Vân Quật - CĐKT ss2</p>
-                  <p class="card-text" id="ch1">Tiếp nối không khí của hội tại,
-                    BCH Đoàn
-                    thôn Vân Quật tiếp tục tổ...</p>
-                    <button type="button" class="btn btn-primary" style="padding: 2px; "><a
+                                <!-- <a href="index_HD1.html" class="btn btn-primary"  id="btn_a">Xem chi -->
+                                <!-- tiết</a> -->
+                                <!-- </div> -->
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xs-4">
+                        <div class="card" id="card_news">
+                            <img class="card-img-top" src="img/dtvq2.jpg" id="img_card">
+                            <div class="card-body">
+                                <p class="card-title text-center" id="ch">Vân Quật - CĐKT ss2</p>
+                                <p class="card-text" id="ch1">Tiếp nối không khí của hội tại, BCH Đoàn thôn Vân Quật tiếp tục tổ...</p>
+                                <button type="button" class="btn btn-primary" style="padding: 2px; "><a
                       href="index_HD2.html" style="color: aliceblue;">Xem chi
                       tiết</a></button>
-                </div>
-              </div>
-            </div>
-            <div class="col-xs-4">
-              <div class="card" id="card_news">
-                <img class="card-img-top" src="img/dtvq3.jpg" id="img_card">
-                <div class="card-body">
-                  <p class="card-title text-center" id="ch">Hoạt động thiện
-                    nguyện</p>
-                  <p class="card-text" id="ch1">Trao gửi yêu thương. Đoàn viên
-                    thôn Vân
-                    Quật chung tay..</p>
-                    <button type="button" class="btn btn-primary" style="padding: 2px; "><a
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xs-4">
+                        <div class="card" id="card_news">
+                            <img class="card-img-top" src="img/dtvq3.jpg" id="img_card">
+                            <div class="card-body">
+                                <p class="card-title text-center" id="ch">Hoạt động thiện nguyện
+                                </p>
+                                <p class="card-text" id="ch1">Trao gửi yêu thương. Đoàn viên thôn Vân Quật chung tay..</p>
+                                <button type="button" class="btn btn-primary" style="padding: 2px; "><a
                       href="index_HD3.html" style="color: aliceblue;">Xem chi
                       tiết</a></button>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-              </div>
-            </div>
-          </div>
 
-          <!-- -----end ----car------ -->
+                <!-- -----end ----car------ -->
+            </div>
+            <div class="col-xs-2" id="dis1"> </div>
         </div>
-        <div class="col-xs-2" id="dis1"> </div>
-      </div>
     </div>
     <!-- --------endnews----------- -->
 
@@ -179,68 +160,63 @@
 
     <!-- ---------footer-------- -->
     <div class="container-fluid bg-light " id="ft_bg">
-      <div class="row">
-        <div class="col-xs-6 ">
-          <p id="ft_h">
-            THÔNG TIN LIÊN HỆ
-          </p>
-          <ul id="ul_ft">
-            <li><img src="img/icon/home.png" id="ic_ft1">
-              Đoàn TNCH Hồ Chí Minh Thôn Vân Quật
-            </li>
-            <li> <img src="img/icon/map.png" id="ic_ft1">
-              Thôn Vân Quật, Xã Duy Thành, Huyện Duy Xuyên, Tỉnh
-              Quảng Nam
-            </li>
-            <li> <img src="img/icon/contact.png" id="ic_ft1">
-              doanthonvanquat@gmail.com
-            </li>
-          </ul>
-          <!-- <a style="color: #0099FF; float: left;">Đoàn TNCH Hồ Chí Minh Thôn Vân Quật</a>
+        <div class="row">
+            <div class="col-xs-6 ">
+                <p id="ft_h">
+                    THÔNG TIN LIÊN HỆ
+                </p>
+                <ul id="ul_ft">
+                    <li><img src="img/icon/home.png" id="ic_ft1"> Đoàn TNCS Hồ Chí Minh Thôn Vân Quật
+                    </li>
+                    <li> <img src="img/icon/map.png" id="ic_ft1"> Thôn Vân Quật, Xã Duy Thành, Huyện Duy Xuyên, Tỉnh Quảng Nam
+                    </li>
+                    <li> <img src="img/icon/contact.png" id="ic_ft1"> doanthonvanquat@gmail.com
+                    </li>
+                </ul>
+                <!-- <a style="color: #0099FF; float: left;">Đoàn TNCH Hồ Chí Minh Thôn Vân Quật</a>
             <a style="color: #0099FF; float: left;">Thôn Vân Quật, Xã Duy Thành, Huyện Duy Xuyên, Tỉnh QUảng Nam</a><br>
             <a style="color: #0099FF; float: left;">doanthonvanquat@gmail.com</a> -->
 
-        </div>
-        <div class="col-xs-6 ">
-          <p id="ft_h">
-            THEO DÕI CHÚNG TÔI
-          </p>
-          <ul id="ul_ft">
-            <li><img src="img/icon/fb.jpg" id="ic_ft">
-              <a
-                href="https://www.facebook.com/profile.php?id=100082551411057"
-                style="color: #810505;">Tuổi Trẻ Vân Quật Duy
+            </div>
+            <div class="col-xs-6 ">
+                <p id="ft_h">
+                    THEO DÕI CHÚNG TÔI
+                </p>
+                <ul id="ul_ft">
+                    <li><img src="img/icon/fb.jpg" id="ic_ft">
+                        <a href="https://www.facebook.com/profile.php?id=100082551411057" style="color: #810505;">Tuổi Trẻ Vân Quật Duy
                 Thành</a> </li>
-          </ul>
+                </ul>
+            </div>
         </div>
-      </div>
     </div>
     <footer id="ft" class="bg-light mt-2">
-      <h6>
-        Trang web được phát triển bởi
-        <a href="https://www.facebook.com/VietAn.Tran.1606.CE001"
-          style="color: #810505;">Trần Viết An</a>
-      </h6>
-      <h6>Trang web đang được triển khai trên nên tảng Github cá nhân</h6>
+        <h6>
+            Trang web được phát triển bởi
+            <a href="https://www.facebook.com/VietAn.Tran.1606.CE001" style="color: #810505;">Trần Viết An</a>
+        </h6>
+        <h6>Trang web đang được triển khai trên nên tảng Github cá nhân</h6>
     </footer>
     <audio id="audio_p">
       <source src="./audio/GiaiDieuTuHao.mp3">
     </audio>
     <!-- ---------end footer-------- -->
-  </body>
-  <script>
-        var audio = document.getElementById("audio_p");
-        function funcplay() {
-          audio.play();
+</body>
+<script>
+    var audio = document.getElementById("audio_p");
+
+    function funcplay() {
+        audio.play();
+    }
+
+    function myFunction() {
+        var x = document.getElementById("myTopnav");
+        if (x.className === "topnav") {
+            x.className += " responsive";
+        } else {
+            x.className = "topnav";
         }
-        function myFunction() {
-            var x = document.getElementById("myTopnav");
-            if (x.className === "topnav") {
-                x.className += " responsive";
-            } else {
-                x.className = "topnav";
-            }
-        }
-    
-      </script>
+    }
+</script>
+
 </html>
