--- a/index_lh.html
+++ b/index_lh.html
@@ -1,174 +1,143 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>Vân Quật - Giới Thiệu</title>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="css/css.css">
-        <link rel="stylesheet" href="css/css_GT.css">
 
-        <link rel="stylesheet"
-            href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-        <script
-            src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-        <script
-            src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-        <link rel="stylesheet" type="text/css"
-            href="bootstraps/css/bootstrap.css">
-        <link rel="stylesheet" type="text/css" href="bootstraps/js/bootstrap.js">
-        <link type="text/css" href="bootstrap/css/bootstrap-responsive.min.css"
-            rel="stylesheet">
-        <link rel="stylesheet"
-            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
-            integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w=="
-            crossorigin="anonymous" />
-        <script src="js/js.js"></script>
+<head>
+    <title>Vân Quật - Giới Thiệu</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="css/css.css">
+    <link rel="stylesheet" href="css/css_GT.css">
 
-    </head>
-    <body>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="bootstraps/css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="bootstraps/js/bootstrap.js">
+    <link type="text/css" href="bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
+    <script src="js/js.js"></script>
 
-        <div class="container-fluid" style="display: flex; width: 100%;">
-            <img id="logoD" src="img/banner.png">
+</head>
+
+<body>
+
+    <div class="container-fluid" style="display: flex; width: 100%;">
+        <img id="logoD" src="img/banner.png">
+    </div>
+    <div class="container-fluid">
+        <div style="color: black; text-align: center; height : auto; font-weight: 500; float: center;font-size: 10px;" id="time">
+            <span id="ngay"></span><span>/</span>
+            <span id="thang"></span><span>/</span>
+            <span id="nam"></span><span>,</span>
+            <span id="gio">00</span><span> :</span>
+            <span id="phut">00</span><span> :</span>
+            <span id="giay">00</span><span> </span>
         </div>
-        <div class="container-fluid">
-            <div
-                style="color: black; text-align: center; height : auto; font-weight: 500; float: center;font-size: 10px;"
-                id="time">
-                <span id="ngay"></span><span>/</span>
-                <span id="thang"></span><span>/</span>
-                <span id="nam"></span><span>,</span>
-                <span id="gio">00</span><span> :</span>
-                <span id="phut">00</span><span> :</span>
-                <span id="giay">00</span><span> </span>
+    </div>
+    <!-- //-------------menu------------------- -->
+    <div class="container-fluid mt-2 bg-light">
+        <div id="menu_center">
+            <div class="topnav" id="myTopnav">
+
+                <a href="index.html" id="mn">
+                    <img id="icon_mn" src="img/icon/home.png"> Trang Chủ
+                </a>
+                <a href="index_GT.html" id="mn">
+                    <img id="icon_mn" src="img/icon/info.png"> Giới Thiệu
+                </a>
+                <a href="index_HD.html" id="mn">
+                    <img id="icon_mn" src="img/icon/news.png"> Hoạt Động
+                </a>
+                <a href="index_DCD1.html" id="mn">
+                    <img id="icon_mn" src="img/icon/map.png"> Địa Chỉ Đỏ
+                </a>
+                <a href id="mn">
+                    <img id="icon_mn" src="img/icon/contact.png"> Liên hệ
+                </a>
+
+                <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+                    <i class="fa fa-bars"></i>
+                </a>
             </div>
         </div>
-        <!-- //-------------menu------------------- -->
-        <div class="container-fluid mt-2 bg-light">
-            <div id="menu_center">
-                <div class="topnav" id="myTopnav">
+    </div>
 
-                    <a href="index.html" id="mn">
-                        <img id="icon_mn" src="img/icon/home.png">
-                        Trang Chủ
-                    </a>
-                    <a href="index_GT.html" id="mn">
-                        <img id="icon_mn" src="img/icon/info.png">
-                        Giới Thiệu
-                    </a>
-                    <a href="index_HD.html" id="mn">
-                        <img id="icon_mn" src="img/icon/news.png">
-                        Hoạt Động
-                    </a>
-                    <a href="index_DCD1.html" id="mn">
-                        <img id="icon_mn" src="img/icon/map.png">
-                        Địa Chỉ Đỏ
-                    </a>
-                    <a href id="mn">
-                        <img id="icon_mn" src="img/icon/contact.png">
-                        Liên hệ
-                    </a>
-
-                    <a href="javascript:void(0);" class="icon"
-                        onclick="myFunction()">
-                        <i class="fa fa-bars"></i>
-                    </a>
-                </div>
+    <div class="container mt-2 bg-light">
+        <ul style="padding: 0px;">
+            <li><img src="img/icon/home.png" id="ic_ft2"> Đoàn TNCS Hồ Chí Minh Thôn Vân Quật
+            </li>
+            <li> <img src="img/icon/map.png" id="ic_ft2"> Thôn Vân Quật, Xã Duy Thành, Huyện Duy Xuyên, Tỉnh Quảng Nam
+            </li>
+            <li> <img src="img/icon/contact.png" id="ic_ft2"> doanthonvanquat@gmail.com
+            </li>
+        </ul>
+        <form>
+            <div class="form-group">
+                <label for="exampleFormControlInput1">Họ và tên:</label>
+                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="ví dụ: Trần Viết An">
             </div>
-        </div>
+            <div class="form-group">
+                <label for="exampleFormControlInput1">Email:</label>
+                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+            </div>
 
-        <div class="container mt-2 bg-light">
-            <ul style="padding: 0px;">
-                <li><img src="img/icon/home.png" id="ic_ft2">
-                    Đoàn TNCH Hồ Chí Minh Thôn Vân Quật
-                </li>
-                <li> <img src="img/icon/map.png" id="ic_ft2">
-                    Thôn Vân Quật, Xã Duy Thành, Huyện Duy Xuyên, Tỉnh
-                    Quảng Nam
-                </li>
-                <li> <img src="img/icon/contact.png" id="ic_ft2">
-                    doanthonvanquat@gmail.com
-                </li>
-            </ul>
-            <form>
-                <div class="form-group">
-                    <label for="exampleFormControlInput1">Họ và tên:</label>
-                    <input type="email" class="form-control"
-                        id="exampleFormControlInput1"
-                        placeholder="ví dụ: Trần Viết An">
-                </div>
-                <div class="form-group">
-                    <label for="exampleFormControlInput1">Email:</label>
-                    <input type="email" class="form-control"
-                        id="exampleFormControlInput1"
-                        placeholder="name@example.com">
-                </div>
-
-                <div class="form-group">
-                    <label for="exampleFormControlTextarea1">Nội dung đóng góp:</label>
-                    <textarea class="form-control"
-                        id="exampleFormControlTextarea1"
-                        rows="3"></textarea>
-                </div>
-                <button type="button" class="btn-xs btn-primary" id="send" onclick="alert('Cảm ơn bạn đã đóng góp nội dung với chúng tôi! ')"><a style="color: aliceblue;">Gửi</a></button>
-            </form>
-        </div>
-        <!-- ---------footer-------- -->
-        <div class="container-fluid bg-light " id="ft_bg">
-            <div class="row">
-                <div class="col-xs-6 ">
-                    <p id="ft_h">
-                        THÔNG TIN LIÊN HỆ
-                    </p>
-                    <ul id="ul_ft">
-                        <li><img src="img/icon/home.png" id="ic_ft1">
-                            Đoàn TNCH Hồ Chí Minh Thôn Vân Quật
-                        </li>
-                        <li> <img src="img/icon/map.png" id="ic_ft1">
-                            Thôn Vân Quật, Xã Duy Thành, Huyện Duy Xuyên, Tỉnh
-                            Quảng Nam
-                        </li>
-                        <li> <img src="img/icon/contact.png" id="ic_ft1">
-                            doanthonvanquat@gmail.com
-                        </li>
-                    </ul>
-                    <!-- <a style="color: #0099FF; float: left;">Đoàn TNCH Hồ Chí Minh Thôn Vân Quật</a>
+            <div class="form-group">
+                <label for="exampleFormControlTextarea1">Nội dung đóng góp:</label>
+                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+            </div>
+            <button type="button" class="btn-xs btn-primary" id="send" onclick="alert('Cảm ơn bạn đã đóng góp nội dung với chúng tôi! ')"><a style="color: aliceblue;">Gửi</a></button>
+        </form>
+    </div>
+    <!-- ---------footer-------- -->
+    <div class="container-fluid bg-light " id="ft_bg">
+        <div class="row">
+            <div class="col-xs-6 ">
+                <p id="ft_h">
+                    THÔNG TIN LIÊN HỆ
+                </p>
+                <ul id="ul_ft">
+                    <li><img src="img/icon/home.png" id="ic_ft1"> Đoàn TNCS Hồ Chí Minh Thôn Vân Quật
+                    </li>
+                    <li> <img src="img/icon/map.png" id="ic_ft1"> Thôn Vân Quật, Xã Duy Thành, Huyện Duy Xuyên, Tỉnh Quảng Nam
+                    </li>
+                    <li> <img src="img/icon/contact.png" id="ic_ft1"> doanthonvanquat@gmail.com
+                    </li>
+                </ul>
+                <!-- <a style="color: #0099FF; float: left;">Đoàn TNCH Hồ Chí Minh Thôn Vân Quật</a>
               <a style="color: #0099FF; float: left;">Thôn Vân Quật, Xã Duy Thành, Huyện Duy Xuyên, Tỉnh QUảng Nam</a><br>
               <a style="color: #0099FF; float: left;">doanthonvanquat@gmail.com</a> -->
 
-                </div>
-                <div class="col-xs-6 ">
-                    <p id="ft_h">
-                        THEO DÕI CHÚNG TÔI
-                    </p>
-                    <ul id="ul_ft">
-                        <li><img src="img/icon/fb.jpg" id="ic_ft">
-                            <a
-                                href="https://www.facebook.com/profile.php?id=100082551411057"
-                                style="color: #810505;">Tuổi Trẻ Vân Quật Duy
+            </div>
+            <div class="col-xs-6 ">
+                <p id="ft_h">
+                    THEO DÕI CHÚNG TÔI
+                </p>
+                <ul id="ul_ft">
+                    <li><img src="img/icon/fb.jpg" id="ic_ft">
+                        <a href="https://www.facebook.com/profile.php?id=100082551411057" style="color: #810505;">Tuổi Trẻ Vân Quật Duy
                                 Thành</a> </li>
-                    </ul>
-                </div>
+                </ul>
             </div>
         </div>
-        <footer id="ft" class="bg-light mt-2">
-            <h6>
-                Trang web được phát triển bởi
-                <a href="https://www.facebook.com/VietAn.Tran.1606.CE001"
-                    style="color: #810505;">Trần Viết An</a>
-            </h6>
-            <h6>Trang web đang được triển khai trên nên tảng Github cá nhân</h6>
-        </footer>
-        <!-- ---------end footer-------- -->
-    </body>
-    <script>
-        function myFunction() {
-            var x = document.getElementById("myTopnav");
-            if (x.className === "topnav") {
-                x.className += " responsive";
-            } else {
-                x.className = "topnav";
-            }
+    </div>
+    <footer id="ft" class="bg-light mt-2">
+        <h6>
+            Trang web được phát triển bởi
+            <a href="https://www.facebook.com/VietAn.Tran.1606.CE001" style="color: #810505;">Trần Viết An</a>
+        </h6>
+        <h6>Trang web đang được triển khai trên nên tảng Github cá nhân</h6>
+    </footer>
+    <!-- ---------end footer-------- -->
+</body>
+<script>
+    function myFunction() {
+        var x = document.getElementById("myTopnav");
+        if (x.className === "topnav") {
+            x.className += " responsive";
+        } else {
+            x.className = "topnav";
         }
-    
-      </script>
+    }
+</script>
+
 </html>
