--- a/index_HD.html
+++ b/index_HD.html
@@ -168,8 +168,7 @@
                 <ul id="ul_ft">
                     <li><img src="img/icon/home.png" id="ic_ft1"> Đoàn TNCS Hồ Chí Minh Thôn Vân Quật
                     </li>
-                    <li> <img src="img/icon/map.png" id="ic_ft1"> Thôn Vân Quật, Xã Duy Thành, Huyện Duy Xuyên, Tỉnh Quảng Nam
-                    </li>
+                    <li> <img src="img/icon/map.png" id="ic_ft1"> Vân Quật - Duy Thành - Duy Xuyên - Quảng Nam</li>
                     <li> <img src="img/icon/contact.png" id="ic_ft1"> doanthonvanquat@gmail.com
                     </li>
                 </ul>
