--- a/index_HD1.html
+++ b/index_HD1.html
@@ -84,8 +84,8 @@
                 <div style="width: 100%; display:flex; justify-content:center;">
                     <img src="img/ht3.jpg" id="sty_i">
                 </div>
-                <p id="p_intro">Đoàn thôn Vân Quật của chúng ta đã xuất sắc nhận được là cờ đỏ vinh quang với vị trí nhất toàn đoàn, nhất trên mọi mặt trận. Kết quả đó đã cho thấy được công sức, sự cố gắng không ngừng và thời gian luyện tập cũng như một tinh thần đoàn
-                    kết đáng tự hào của các bạn Đoàn viên. mặt trận</p>
+                <p id="p_intro">Đoàn thôn Vân Quật của chúng ta đã xuất sắc nhận được là cờ đỏ vinh quang với vị trí nhất toàn đoàn. Kết quả đó đã cho thấy được công sức, sự cố gắng không ngừng và thời gian luyện tập cũng như một tinh thần đoàn kết đáng tự hào của các
+                    bạn Đoàn viên</p>
                 <div style="width: 100%; display:flex; justify-content:center;">
                     <img src="img/ht2.jpg" id="sty_i">
                 </div>
@@ -105,7 +105,7 @@
                 <ul id="ul_ft">
                     <li><img src="img/icon/home.png" id="ic_ft1"> Đoàn TNCS Hồ Chí Minh Thôn Vân Quật
                     </li>
-                    <li> <img src="img/icon/map.png" id="ic_ft1"> Thôn Vân Quật, Xã Duy Thành, Huyện Duy Xuyên, Tỉnh Quảng Nam
+                    <li> <img src="img/icon/map.png" id="ic_ft1"> Vân Quật - Duy Thành - Duy Xuyên - Quảng Nam
                     </li>
                     <li> <img src="img/icon/contact.png" id="ic_ft1"> doanthonvanquat@gmail.com
                     </li>
