--- a/index_BanDoVietNam.html
+++ b/index_BanDoVietNam.html
@@ -2,7 +2,7 @@
 <html lang="vi">
 
 <head>
-    <title>Vân Quật - Địa chỉ đỏ</title>
+    <title>Vân Quật - Ý Nghĩa Bản đồ Việt Nam</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/css.css">
