--- a/index_BanDoVietNam.html
+++ b/index_BanDoVietNam.html
@@ -84,7 +84,7 @@
                     bào Việt Nam.
                 </p>
                 <p id="p_vi2">Ngôi sao năm cánh được đặc tại vị trí tượng trưng cho thủ đô Hà Nội. Màu vàng còn thể hiện màu da chung của dân tộc, năm cánh sao tượng trưng cho năm tầng lớp sĩ, nông, công, thương, binh cùng đoàn kết một lòng.</p>
-                <p id="p_vi2"> Nói đến chủ quyền biển đảo thì không có gì có thể chối cải được về hai quần đào Hoàng Sa (Đà Nẵng), Trường Sa (Khánh Hòa) là của Việt Nam</p>
+                <p id="p_vi2"> Nói đến chủ quyền biển đảo thì không có gì có thể chối cải được về hai quần đào Hoàng Sa (Đà Nẵng), Trường Sa (Khánh Hòa) là của Việt Nam.</p>
             </div>
 
         </div>
