--- a/index_HD2.html
+++ b/index_HD2.html
@@ -81,7 +81,7 @@
                     <img src="img/cdkt0.jpg" id="sty_i">
                 </div>
 
-                <p id="p_intro">Tiếp nối không khí sôi nỗi của hội trại "Âm Vang tháng 8" và xây dựng chương trình hoạt động hè tại thôn cho Đoàn viên. BCH Đoàn TN thông Vân Quật đã tổ chức hành trình Cuộc đua kỳ thú diễn ra ngày 03/9/2022. Với 5 đội thi với năm sắc
+                <p id="p_intro">Tiếp nối không khí sôi nỗi của hội trại "Âm Vang tháng 8" và xây dựng chương trình hoạt động hè tại thôn cho Đoàn viên. BCH Đoàn thôn Vân Quật đã tổ chức hành trình Cuộc đua kỳ thú diễn ra ngày 03/9/2022. Với 5 đội thi với năm sắc
                     màu ( gồm 30 thành viên) Những cảm xúc khó quên, những người bạn mới chân thật, dễ thương! Không quên cảm ơn BTC của cuộc đua, tạo nên niềm hân hoan, tạo nên tiếng cười, và các trò chơi vừa hách não, vừa vui, và vừa bẩn! 😂😂😂😂
                 </p>
                 <div style="width: 100%; display:flex; justify-content:center;">
