--- a/index_HD1.html
+++ b/index_HD1.html
@@ -72,7 +72,7 @@
             <div class="col-xs-12" id="tab3">
                 <h3 style="text-align: center;">Hội trại truyền thống 2022: Âm Vang Tháng 8</h3>
                 <p id="p_intro">
-                    Với không khí xôi nỗi của hội trại "ÂM VANG", vang từ ngày 19/08 đến hết tháng chưa hết vang. Gửi đến các bạn trẻ, gửi đến thế hệ thanh thiếu niên, gửi đến cánh tay đắc lực của Đảng, của Nhà nước. Chúng ta đã hết mình vì cuộc vui, vì phong trào thôn,
+                    Với không khí sôi nỗi của hội trại "ÂM VANG", vang từ ngày 19/08 đến hết tháng chưa hết vang. Gửi đến các bạn trẻ, gửi đến thế hệ thanh thiếu niên, gửi đến cánh tay đắc lực của Đảng, của Nhà nước. Chúng ta đã hết mình vì cuộc vui, vì phong trào thôn,
                     lớn hơn là phong trào của xã nhà, chúng ta cống hiến, mang niềm vui, mang kỹ năng, và mang cả nhiệt huyết sức trẻ. Qua hội trại phần nào tâm tư, nguyện vọng của thế hệ trẻ được phơi bày, cũng như làm nóng lên tinh thần xung kích. Để
                     có được cuộc vui, để ghi lại dấu ấn sâu sắc, thì công sức chúng ta bỏ ra phải thật xứng đáng. Ngoài các cuộc vui, Đoàn xã cùng hy vọng chúng ta vì lý tưởng cao hơn, sống cống hiến, có ích, và tốt hơn lên hằng ngày, không chỉ là sôi
                     nổi trong phong trào, mà còn cống hiến tình nguyện, vì môi trường, vì truyền thống, vì lối sống và cả nghĩa cử cao đẹp. Mọi thứ sẽ nhanh hơn, lan tỏa mạnh hơn, tất cả dựa vào các em. Tinh thần hết mình ấy, sẵn sàng ấy, mới làm nên
